tests/baselines/reference/extendNonClassSymbol2(strict=true).errors.txt
extendNonClassSymbol2.ts(2,4): error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.
extendNonClassSymbol2.ts(4,9): error TS7009: 'new' expression, whose target lacks a construct signature, implicitly has an 'any' type.
extendNonClassSymbol2.ts(5,17): error TS2507: Type '() => void' is not a constructor function type.


==== extendNonClassSymbol2.ts (3 errors) ====
    function Foo() {
       this.x = 1;
       ~~~~
!!! error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.
    }
    var x = new Foo(); // legal, considered a constructor function
            ~~~~~~~~~
!!! error TS7009: 'new' expression, whose target lacks a construct signature, implicitly has an 'any' type.
    class C extends Foo {} // error, could not find symbol Foo
                    ~~~
!!! error TS2507: Type '() => void' is not a constructor function type.